overflow of topic names fixed

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -245,6 +245,7 @@ input.version-id {
 .headline-box {
     position: relative;
     height: 50px;
+    overflow-x: auto;
 }
 
 .headline-box h4 {
